@@ -154,14 +154,14 @@
 	hasNoDataValues <- bi[['hasNoDataValue']]
 	NoDataValue <- bi[['NoDataValue']]
 	
-	if (getOption('rasterRGDALVersion') > "0.7-19") {	
-		sbi <- attr(gdalinfo, 'sdf')
-		Bmin <- sbi[['Bmin']]
-		Bmax <- sbi[['Bmax']]	
-	} else {
+#	if (getOption('rasterRGDALVersion') > "0.7-19") {	
+#		sbi <- attr(gdalinfo, 'sdf')
+#		Bmin <- sbi[['Bmin']]
+#		Bmax <- sbi[['Bmax']]	
+#	} else {
 		Bmin <- bi[['Bmin']]
 		Bmax <- bi[['Bmax']]
-	}
+#	}
 	
 	
 	RATlist <- attr(gdalinfo, 'RATlist')
